--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Steven Slayden",
   "license": "MIT",
   "dependencies": {
+    "electrode-confippet": "^1.5.0",
     "electrode-server": "^1.2.0",
     "winston": "^2.2.0"
   }
